Archive2/53/4ac56372b9e682/output
clang++ ##########################################################
2
7
100
g++ ##########################################################
main.cpp: In function 'constexpr array<long unsigned int, 1001ul> make_bottle_count()':
main.cpp:27:1: error: expression '<throw-expression>' is not a constant-expression
 }
 ^
main.cpp: In function 'int main()':
main.cpp:31:53: error: 'constexpr array<long unsigned int, 1001ul> make_bottle_count()' called in a constant expression
     constexpr auto bottle_count = make_bottle_count();
                                                     ^
